# Getting_Started_With_FastAPI

./: README.md  pyproject.toml
project/src/: main.py
project/src/fake/: creature.py  explorer.py
project/src/web/: explorer.py
sources/: async_yield.py  base_model_use.py  dataclass_use.py  dependency.py  effectiveness_value.py  hello.py  hello_body.py  hello_header.py  hello_header_select.py  hello_url.py  http_status_code_select.py  jsonabe_encoder_json_boom.py  starlette_hello.py  yield.py
