[tool.poetry]
name = "getting-started-with-fastapi"
version = "0.1.0"
description = ""
authors = ["LeeInGyu <developLee20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
httpie = "^3.2.4"
requests = "^2.32.3"
httpx = "^0.28.1"
pytest = "^8.3.4"
mypy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
